migrates to immutable data structure